# binder-rust

./: Cargo.toml  README.md
examples/: myservice.rs  simple.rs
parcelable_derive/: Cargo.toml
parcelable_derive/src/: lib.rs
src/: binder.rs  lib.rs  parcel.rs  parcelable.rs  service.rs
