[package]
name = "binder-rust"
version = "0.1.0"
authors = ["s1341 <github@shmarya.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
nix = "0.20.0"
num-traits = "0.2"
num-derive = "0.3"


[examples]
