[package]
name = "binder-rust"
version = "0.1.2"
authors = ["s1341 <github@shmarya.net>"]
edition = "2018"
description = "An implementatoin of Android Binder API for rust"
repository = "https://github.com/s1341/binder-rust"
license-file = "LICENSE"
keywords = ["binder", "android"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
nix = "0.20.0"
num-traits = "0.2"
num-derive = "0.3"
bitflags = "1.2.1"

[[example]]
name = "myservice"
